--- a/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
+++ b/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RiddhiBooks.Models\RiddhiBooks.Models.csproj" />
   </ItemGroup>
 
 </Project>
