added reference in the RiddhiBooks.DataAccess and updated README.txt

--- a/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
+++ b/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RiddhiBooks.Models\RiddhiBooks.Models.csproj" />
+    <ProjectReference Include="..\RiddhiBooks.Utility\RiddhiBooks.Utility.csproj" />
   </ItemGroup>
 
 </Project>
