changes in .csproj and updated README...

--- a/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
+++ b/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\RiddhiBooks.Utility\RiddhiBooks.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+	  <Folder Include="Data\" />
+    <Folder Include="Repository\IRepository\" />
+  </ItemGroup>
+
 </Project>
