--- a/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
+++ b/RiddhiBooks.DataAccess/RiddhiBooks.DataAccess.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repository\UnitOfWorkBase.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.16" />
