--- a/RiddhiBookStore/RiddhiBookStore.csproj
+++ b/RiddhiBookStore/RiddhiBookStore.csproj
@@ -18,6 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Areas\Admin\Views\_ViewImports.cshtml" />
+    <Content Remove="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Remove="Areas\Customers\Views\Home\Index.cshtml" />
     <Content Remove="Areas\Customers\Views\Home\Privacy.cshtml" />
     <Content Remove="Areas\Customers\Views\_ViewImports.cshtml" />
@@ -25,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Areas\Admin\Views\_ViewImports.cshtml" />
+    <None Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <None Include="Areas\Customers\Views\Home\Index.cshtml" />
     <None Include="Areas\Customers\Views\Home\Privacy.cshtml" />
     <None Include="Areas\Customers\Views\_ViewImports.cshtml" />
@@ -57,7 +61,6 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\Category\" />
   </ItemGroup>
 
 </Project>
